--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,14 @@ body {
 }
 
 #intro {
-  padding: 20px 0;
+  box-sizing: border-box;
+  padding: 20px 20px;
+  padding-bottom: 70px;
   text-align: center;
   display: block;
   width: 100%;
+  border-bottom: 1.5px solid;
+  border-color: rgb(110, 110, 110);
 }
 
 h1, h2, h3, h4 {
@@ -178,6 +182,10 @@ main {
 /* Layout styling */
 .container {
   padding: 0 15px;
+}
+
+#work {
+  padding-top: 70px;
 }
 
 #work .row {
@@ -445,6 +453,22 @@ ul.social li {
 }
 
 html{scroll-behavior:smooth}
+
+.linkhead a {
+  text-decoration: none;
+  font-family: 'Merriweather', serif;
+  font-size: 1.1em;
+  font-weight: 400;
+  color: rgb(35, 76, 12);
+}
+
+.linkhead a:visited {
+  text-decoration: none;
+}
+
+.linkhead a:active {
+  text-decoration: none;
+}
 
 /* ==============================
 Medium devices (640px and larger)
