--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@ body {
 
 #intro {
   box-sizing: border-box;
-  padding: 20px 20px;
-  padding-bottom: 70px;
+  padding: 20px 20px 70px;
   text-align: center;
   display: block;
   width: 100%;
@@ -226,17 +225,23 @@ main {
   padding-top: 6px;
 }
 
-header ul {
+
+
+nav ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-header ul a:visited {
-  color: rgb(187, 199, 179);
+nav ul a {
+  color: rgb(255, 255, 255);
 }
 
-header ul a:active {
+nav ul a:visited {
+  color: rgb(255, 255, 255);
+}
+
+nav ul a:active {
   /* selected link */
   color: rgb(255, 255, 255, 0.7);
 }
@@ -376,7 +381,7 @@ ul.social li {
 
 .coat {
   animation-duration: 5s;
-  animation-name: color-change2 cloud-move;
+  animation-name: color-change2, cloud-move;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
@@ -443,30 +448,33 @@ Medium devices (640px and larger)
     padding-top: 14px;
   }
 
-  nav ul li {
-    padding: 0 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
+nav ul li {
+      padding: 0 15px;
+      text-transform: uppercase;
+      font-weight: 700;
+      color: rgb(255, 255, 255);
+      text-decoration: none;
+}
+
+.home nav ul li {
     transition: 0.2s opacity;
     transform: translateX(100rem);
     animation: slidein .5s forwards;
   }
 
-  nav>ul>li:nth-child(1) {
+.home nav>ul>li:nth-child(1) {
     animation-delay: 0s;
     }
 
-    nav>ul>li:nth-child(2) {
+.home nav>ul>li:nth-child(2) {
       animation-delay: 0.5s;
       }
 
-      nav>ul>li:nth-child(3) {
+.home nav>ul>li:nth-child(3) {
         animation-delay: 1s;
         }
 
-        nav>ul>li:nth-child(4) {
+.home nav>ul>li:nth-child(4) {
           animation-delay: 1.5s;
           }
 
@@ -476,8 +484,8 @@ Medium devices (640px and larger)
     cursor: pointer;
   }
 
-  nav ul li::before
-  nav ul li::after {
+.home nav ul li::before
+.home nav ul li::after {
     content: "";
     position: absolute;
     left: 0px;
@@ -489,19 +497,19 @@ Medium devices (640px and larger)
     transition: all .5s;
   }
 
-  nav ul li::before {
+.home nav ul li::before {
       top: 0px;
       transform-origin: left;
   }
 
-  nav ul li::after
+.home nav ul li::after
   {
       bottom: 0px;
       transform-origin: right;
   }
 
-  nav ul li:hover::before
-  nav ul li:hover::after {
+.home nav ul li:hover::before
+.home nav ul li:hover::after {
       opacity: 1;
       transform: scaleX(1);
   }
@@ -559,6 +567,13 @@ header ul a:hover:before, header ul a:hover:after
   .navtoggle li:last-child {
     display: none;
   }
+
+  .navtoggle.responsive li:not(:last-child) {
+    border-top: none;
+    display: inline-block;
+    position: relative;
+    text-align: unset;
+}
 
   .col-md-6 {
     width: 50%;
