return to original nav icon

--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,10 @@ ul.social li {
   display: inline-block;
 }
 
+.navtoggle li:not(:last-child) {
+  display: none;
+}
+
 .navtoggle, .navtoggle.responsive {
   position: relative;
 }
